[gd_scene load_steps=2 format=3 uid="uid://8hkhsmiruadb"]

[ext_resource type="Script" path="res://scenes/objects/bird_area/bird_area.gd" id="1_g6p21"]

[node name="BirdArea" type="Area2D"]
position = Vector2(15, 89)
collision_layer = 512
collision_mask = 1024
script = ExtResource("1_g6p21")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
